<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ManE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_shouye">首页</string>
    <string name="main_shequ">我的社区</string>
    <string name="main_zhuan">e赚点</string>
    <string name="main_my">我的</string>
    <string name="gps_address">北店嘉园小区</string>
    <string name="findpassword">找回密码</string>
    <string name="concessions">周边优惠</string>
    <string name="market">便民超市</string>
    <string name="joinMane">加入满e社区</string>
    <string name="welfare">(免费体检)</string>
    <string name="recommend">为您推荐</string>
    <string name="index_list_title">标题</string>
    <string name="index_list_text">内容内容内容内容内容内</string>
    <string name="title_activity_data">ZhouBianShangHuActivity</string>
    <string name="area">区域</string>
    <string name="sort">智能排序</string>
    <string name="aroundshop">周边商户</string>
    <string name="enterpassword">请输入密码</string>
    <string name="enterphonenumber">请输入手机号</string>
    <string name="enternickname">请输入昵称</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="identifyingcode">请输入验证码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="invitationcode">邀请码</string>
    <string name="sendidentifyingcode">发送验证码</string>
    <string name="title_activity_regist_activiy">RegistActiviy</string>
    <string name="confirm">确定</string>
    <string name="accuontid">账号ID:</string>
    <string name="userScore">分红积分:</string>
    <string name="wallet">钱  包:</string>
    <string name="downlinenumber">下线人数</string>
    <string name="mycollect">我的收藏</string>
    <string name="accuontcenter">账户中心</string>
    <string name="customservicephone">客服电话</string>
    <string name="my">我的</string>
    <string name="title_activity_get_monney">GetMonneyActivity</string>
    <string name="updateads">更新广告</string>
    <string name="housekeeping_type">家政类别</string>
    <string name="housekeeping">家政服务</string>
    <string name="more">更多</string>
    <string name="getmonney">赚钱</string>
    <string name="moduledesign">模块定制</string>
    <string name="restaurant">餐饮</string>
    <string name="teahouse">茶室</string>
    <string name="supermaket">超市</string>
    <string name="petshop">宠物店</string>
    <string name="carservice">爱车服务</string>
    <string name="landry">洗衣店</string>
    <string name="hairdressing">美容美发</string>
    <string name="education">教育培训</string>
    <string name="customeadd">自定义添加</string>
    <string name="pleaseentercontent">请输入内容</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_module_design">ModuleDesignActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">搜索</string>
    <string name="popular_recommendation">热门推荐</string>
    <string name="search_history">搜索历史</string>
    <string name="clean_search_history">清除搜索历史</string>
    <string name="yoga">瑜伽</string>
    <string name="sport">运动</string>
    <string name="financing">理财</string>
    <string name="title_activity_finacing">FinacingActivity</string>
    <string name="cleaning">保洁</string>
    <string name="cleaning_project">地毯、油烟机</string>
    <string name="bottled_water">送水</string>
    <string name="bottled_water_project">桶装水、瓶装水</string>
    <string name="babysitter">月嫂</string>
    <string name="babysitter_project">钟点工、照看宝宝</string>
    <string name="appliance_repaire">家电维修</string>
    <string name="appliance_repaire_project">冰箱、洗衣机</string>
    <string name="unlocking">开锁、修锁</string>
    <string name="unlocking_project">上门开锁、修锁</string>
    <string name="recovery">回收</string>
    <string name="recovery_project">手机、电脑</string>
    <string name="computer_repaire">电脑维修</string>
    <string name="computer_repaire_project">笔记本、iPad</string>
    <string name="digital_repaire">数码维修</string>
    <string name="digital_repaire_project">相机、手机</string>
    <string name="pipeline_dredge">管道疏通</string>
    <string name="pipeline_dredge_project">下水道、马桶</string>
    <string name="furniture_repaire">家具维修</string>
    <string name="furniture_repaire_project">地板、沙发、床</string>
    <string name="house_repaire">房屋维修</string>
    <string name="house_repaire_project">卫浴、灯具维修</string>
    <string name="cloth_keeping">洗衣皮具</string>
    <string name="cloth_keeping_project">干洗、皮具养护</string>
    <string name="bank_financing">银行理财</string>
    <string name="title_activity_product_info">ProductInfoActivity</string>
    <string name="onekeyphone">一键拨号</string>
    <string name="title_activity_ad">ADActivity</string>
    <string name="ad">广告</string>
    <string name="cleaninglist">保洁服务列表</string>
    <string name="commonweal">满e公益</string>
    <string name="houserent">房屋出租</string>
    <string name="tour">周边旅游</string>
    <string name="total">总额</string>
    <string name="cashable">可提现：</string>
    <string name="cashed">已提现：</string>
    <string name="backcash">下线返金：</string>
    <string name="transaction_details">交易明细</string>
    <string name="cash">提现</string>
    <string name="cashabletotal">可提现金额</string>
    <string name="bindcard">绑定银行卡</string>
    <string name="entercashtotal">输入提现金额</string>
    <string name="cashtips">每笔金额不超过5000.00元,每天最多提现三次</string>
    <string name="accounttips">(账户余额满300.00元可提现)</string>
    <string name="commit">提交</string>
    <string name="personal_info_set">个人信息设置</string>
    <string name="account_safe">帐号安全</string>
    <string name="info_post">信息推送</string>
    <string name="message_set">消息设置</string>
    <string name="clean_cache">清除缓存</string>
    <string name="update_check">版本自动更新检测</string>
    <string name="suggestion_post">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="product_introduces">产品介绍</string>
    <string name="safe_quit">安全退出</string>
    <string name="change_password_tip">(修改密码)</string>
    <string name="change_password">修改密码</string>
    <string name="enter_old_password">输入旧密码:</string>
    <string name="confirm_password">确认密码:</string>
    <string name="set">设置</string>
    <string name="headicon">头像</string>
    <string name="nickname">昵称</string>
    <string name="name">姓名</string>
    <string name="phonenumber">手机号</string>
    <string name="save">保存</string>
    <string name="sound">声音</string>
    <string name="vibrate">震动</string>
    <string name="message_off">消息免打扰</string>
    <string name="suggestion_post_hint">把你的想法告诉我们吧~</string>
    <string name="property_service">物业服务</string>
    <string name="property_hall">物业大厅</string>
    <string name="property_notification">物业通知</string>
    <string name="property_repair">物业报修</string>
    <string name="property_pay">物业缴费</string>
    <string name="vintage_release">旧货发布</string>
    <string name="public_repair">公共报修</string>
    <string name="personal_repair">个人报修</string>
    <string name="public_repair_tip">保证社区公公设施设备的运行</string>
    <string name="personal_repair_tip">属于你的维修专家</string>
    <string name="call_right_now">立即拨打</string>
    <string name="public_repair_table">公共报修单</string>
    <string name="chosed_community">所选小区</string>
    <string name="name_title">姓        名:</string>
    <string name="contact_phone">联系电话:</string>
    <string name="contact_way">联系方式:</string>
    <string name="address_title">地    址:</string>
    <string name="repair_introduce">报修说明：</string>
    <string name="add_photo_tip">可添加图片(最多5张)</string>
    <string name="power_repair">供电报修</string>
    <string name="water_repair">供水报修</string>
    <string name="net_repair">宽带报修</string>
    <string name="warm_repair">暖气报修</string>
    <string name="house_owner">房主名:</string>
    <string name="water_rent">水费</string>
    <string name="personal">个人</string>
    <string name="company">单位</string>
    <string name="select_invoice_document">选择发票凭证:</string>
    <string name="send_home_tips">注:送货上门(仅限小区内)</string>
    <string name="invoice_title">发票抬头</string>
    <string name="pick_up_the_invoice">自取发票</string>
    <string name="send_home">送货上门</string>
    <string name="vintage_list">旧货列表</string>
    <string name="enter_baby_title">请输入宝贝标题</string>
    <string name="enter_phone_number">请输入手机号</string>
    <string name="enter_baby_introduce">请输入宝贝描述</string>
    <string name="click_add_can_upload_photo">点击加号可以添加图片</string>
    <string name="original_price">原价 （￥）</string>
    <string name="transfer_price">转让价 （￥）</string>
    <string name="release">发布</string>
    <string name="goods_release">物品发布</string>
    <string name="getmonney_game">游戏赚钱</string>
    <string name="app_suggest">APP推荐</string>
    <string name="ezhuandian">e赚点</string>
    <string name="title_activity_map">MapActivity</string>
</resources>
